@@ -1,7 +1,7 @@
 AC_INIT(libxslt/xslt.c)
 
 LIBXSLT_MAJOR_VERSION=0
-LIBXSLT_MINOR_VERSION=9
+LIBXSLT_MINOR_VERSION=10
 LIBXSLT_MICRO_VERSION=0
 PACKAGE=libxslt
 
