@@ -764,7 +764,7 @@ CLASS="PARAMETER"
 WIDTH="80%"
 ALIGN="LEFT"
 VALIGN="TOP"
->&nbsp;</TD
+>  an XSLT transformation context</TD
 ></TR
 ><TR
 ><TD
@@ -781,7 +781,7 @@ CLASS="PARAMETER"
 WIDTH="80%"
 ALIGN="LEFT"
 VALIGN="TOP"
->&nbsp;</TD
+>  an XML node</TD
 ></TR
 ><TR
 ><TD
@@ -876,7 +876,7 @@ CLASS="PARAMETER"
 WIDTH="80%"
 ALIGN="LEFT"
 VALIGN="TOP"
->&nbsp;</TD
+>  an XSLT transformation context</TD
 ></TR
 ><TR
 ><TD
