@@ -167,7 +167,11 @@ HREF="XMLCHAR"
                                              const <GTKDOCLINK
 HREF="XMLCHAR"
 >xmlChar</GTKDOCLINK
-> *use);
+> *use,
+                                             <GTKDOCLINK
+HREF="XMLNODEPTR"
+>xmlNodePtr</GTKDOCLINK
+> inst);
 <GTKDOCLINK
 HREF="XMLNODESETPTR"
 >xmlNodeSetPtr</GTKDOCLINK
@@ -222,7 +226,7 @@ HREF="libxslt-xsltinternals.html#XSLTDOCUMENTPTR"
 ><DIV
 CLASS="REFSECT1"
 ><A
-NAME="AEN2799"
+NAME="AEN2800"
 ></A
 ><H2
 >Description</H2
@@ -232,14 +236,14 @@ NAME="AEN2799"
 ><DIV
 CLASS="REFSECT1"
 ><A
-NAME="AEN2802"
+NAME="AEN2803"
 ></A
 ><H2
 >Details</H2
 ><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN2804"
+NAME="AEN2805"
 ></A
 ><H3
 ><A
@@ -274,7 +278,11 @@ HREF="XMLCHAR"
                                              const <GTKDOCLINK
 HREF="XMLCHAR"
 >xmlChar</GTKDOCLINK
-> *use);</PRE
+> *use,
+                                             <GTKDOCLINK
+HREF="XMLNODEPTR"
+>xmlNodePtr</GTKDOCLINK
+> inst);</PRE
 ></TD
 ></TR
 ></TABLE
@@ -285,7 +293,7 @@ HREF="XMLCHAR"
 ><DIV
 CLASS="INFORMALTABLE"
 ><A
-NAME="AEN2815"
+NAME="AEN2817"
 ></A
 ><P
 ></P
@@ -387,6 +395,23 @@ VALIGN="TOP"
 WIDTH="20%"
 ALIGN="RIGHT"
 VALIGN="TOP"
+><TT
+CLASS="PARAMETER"
+><I
+>inst</I
+></TT
+>&nbsp;:</TD
+><TD
+WIDTH="80%"
+ALIGN="LEFT"
+VALIGN="TOP"
+> the key instruction</TD
+></TR
+><TR
+><TD
+WIDTH="20%"
+ALIGN="RIGHT"
+VALIGN="TOP"
 ><I
 CLASS="EMPHASIS"
 >Returns</I
@@ -406,7 +431,7 @@ VALIGN="TOP"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN2844"
+NAME="AEN2850"
 ></A
 ><H3
 ><A
@@ -451,7 +476,7 @@ HREF="XMLCHAR"
 ><DIV
 CLASS="INFORMALTABLE"
 ><A
-NAME="AEN2855"
+NAME="AEN2861"
 ></A
 ><P
 ></P
@@ -555,7 +580,7 @@ VALIGN="TOP"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN2880"
+NAME="AEN2886"
 ></A
 ><H3
 ><A
@@ -590,7 +615,7 @@ Should be done before global varibales are initialized.</P
 ><DIV
 CLASS="INFORMALTABLE"
 ><A
-NAME="AEN2888"
+NAME="AEN2894"
 ></A
 ><P
 ></P
@@ -645,7 +670,7 @@ VALIGN="TOP"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN2901"
+NAME="AEN2907"
 ></A
 ><H3
 ><A
@@ -675,7 +700,7 @@ HREF="libxslt-xsltinternals.html#XSLTSTYLESHEETPTR"
 ><DIV
 CLASS="INFORMALTABLE"
 ><A
-NAME="AEN2908"
+NAME="AEN2914"
 ></A
 ><P
 ></P
@@ -713,7 +738,7 @@ VALIGN="TOP"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN2917"
+NAME="AEN2923"
 ></A
 ><H3
 ><A
@@ -743,7 +768,7 @@ HREF="libxslt-xsltinternals.html#XSLTDOCUMENTPTR"
 ><DIV
 CLASS="INFORMALTABLE"
 ><A
-NAME="AEN2924"
+NAME="AEN2930"
 ></A
 ><P
 ></P
