@@ -110,7 +110,7 @@ NAME="LIBXSLT-NUMBERSINTERNALS"
 ><DIV
 CLASS="REFNAMEDIV"
 ><A
-NAME="AEN3420"
+NAME="AEN3426"
 ></A
 ><H2
 >Name</H2
@@ -118,7 +118,7 @@ NAME="AEN3420"
 ><DIV
 CLASS="REFSYNOPSISDIV"
 ><A
-NAME="AEN3423"
+NAME="AEN3429"
 ></A
 ><H2
 >Synopsis</H2
@@ -177,7 +177,7 @@ HREF="XMLNODEPTR"
 ><DIV
 CLASS="REFSECT1"
 ><A
-NAME="AEN3436"
+NAME="AEN3442"
 ></A
 ><H2
 >Description</H2
@@ -187,14 +187,14 @@ NAME="AEN3436"
 ><DIV
 CLASS="REFSECT1"
 ><A
-NAME="AEN3439"
+NAME="AEN3445"
 ></A
 ><H2
 >Details</H2
 ><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN3441"
+NAME="AEN3447"
 ></A
 ><H3
 ><A
@@ -237,7 +237,7 @@ HREF="XMLCHAR"
 ><DIV
 CLASS="INFORMALTABLE"
 ><A
-NAME="AEN3451"
+NAME="AEN3457"
 ></A
 ><P
 ></P
@@ -341,7 +341,7 @@ VALIGN="TOP"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN3476"
+NAME="AEN3482"
 ></A
 ><H3
 ><A
@@ -377,7 +377,7 @@ HREF="XMLNODEPTR"
 ><DIV
 CLASS="INFORMALTABLE"
 ><A
-NAME="AEN3484"
+NAME="AEN3490"
 ></A
 ><P
 ></P
