@@ -409,7 +409,7 @@ CLASS="PARAMETER"
 WIDTH="80%"
 ALIGN="LEFT"
 VALIGN="TOP"
->&nbsp;</TD
+> an XSLT pattern</TD
 ></TR
 ><TR
 ><TD
