@@ -122,7 +122,7 @@ NAME="LIBXSLT-XSLTINTERNALS"
 ><DIV
 CLASS="REFNAMEDIV"
 ><A
-NAME="AEN2938"
+NAME="AEN2944"
 ></A
 ><H2
 >Name</H2
@@ -130,7 +130,7 @@ NAME="AEN2938"
 ><DIV
 CLASS="REFSYNOPSISDIV"
 ><A
-NAME="AEN2941"
+NAME="AEN2947"
 ></A
 ><H2
 >Synopsis</H2
@@ -385,7 +385,7 @@ HREF="XMLCHAR"
 ><DIV
 CLASS="REFSECT1"
 ><A
-NAME="AEN3006"
+NAME="AEN3012"
 ></A
 ><H2
 >Description</H2
@@ -395,14 +395,14 @@ NAME="AEN3006"
 ><DIV
 CLASS="REFSECT1"
 ><A
-NAME="AEN3009"
+NAME="AEN3015"
 ></A
 ><H2
 >Details</H2
 ><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN3011"
+NAME="AEN3017"
 ></A
 ><H3
 ><A
@@ -430,7 +430,7 @@ CLASS="PROGRAMLISTING"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN3017"
+NAME="AEN3023"
 ></A
 ><H3
 ><A
@@ -458,7 +458,7 @@ CLASS="PROGRAMLISTING"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN3023"
+NAME="AEN3029"
 ></A
 ><H3
 ><A
@@ -497,7 +497,7 @@ CLASS="PROGRAMLISTING"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN3029"
+NAME="AEN3035"
 ></A
 ><H3
 ><A
@@ -523,7 +523,7 @@ CLASS="PROGRAMLISTING"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN3034"
+NAME="AEN3040"
 ></A
 ><H3
 ><A
@@ -567,7 +567,7 @@ CLASS="PROGRAMLISTING"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN3040"
+NAME="AEN3046"
 ></A
 ><H3
 ><A
@@ -593,7 +593,7 @@ CLASS="PROGRAMLISTING"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN3045"
+NAME="AEN3051"
 ></A
 ><H3
 ><A
@@ -626,7 +626,7 @@ CLASS="PROGRAMLISTING"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN3051"
+NAME="AEN3057"
 ></A
 ><H3
 ><A
@@ -652,7 +652,7 @@ CLASS="PROGRAMLISTING"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN3056"
+NAME="AEN3062"
 ></A
 ><H3
 ><A
@@ -720,7 +720,7 @@ CLASS="PROGRAMLISTING"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN3061"
+NAME="AEN3067"
 ></A
 ><H3
 ><A
@@ -746,7 +746,7 @@ CLASS="PROGRAMLISTING"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN3066"
+NAME="AEN3072"
 ></A
 ><H3
 ><A
@@ -820,7 +820,7 @@ precomputed data.</P
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN3072"
+NAME="AEN3078"
 ></A
 ><H3
 ><A
@@ -846,7 +846,7 @@ CLASS="PROGRAMLISTING"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN3077"
+NAME="AEN3083"
 ></A
 ><H3
 ><A
@@ -889,7 +889,7 @@ stylesheet language like xsl:if or xsl:apply-templates.</P
 ><DIV
 CLASS="INFORMALTABLE"
 ><A
-NAME="AEN3087"
+NAME="AEN3093"
 ></A
 ><P
 ></P
@@ -916,7 +916,7 @@ CLASS="PARAMETER"
 WIDTH="80%"
 ALIGN="LEFT"
 VALIGN="TOP"
->&nbsp;</TD
+> the XSLT transformation context</TD
 ></TR
 ><TR
 ><TD
@@ -933,7 +933,7 @@ CLASS="PARAMETER"
 WIDTH="80%"
 ALIGN="LEFT"
 VALIGN="TOP"
->&nbsp;</TD
+> the input node</TD
 ></TR
 ><TR
 ><TD
@@ -950,7 +950,7 @@ CLASS="PARAMETER"
 WIDTH="80%"
 ALIGN="LEFT"
 VALIGN="TOP"
->&nbsp;</TD
+> the stylesheet node</TD
 ></TR
 ><TR
 ><TD
@@ -967,7 +967,7 @@ CLASS="PARAMETER"
 WIDTH="80%"
 ALIGN="LEFT"
 VALIGN="TOP"
->&nbsp;</TD
+> the compiled information from the stylesheet</TD
 ></TR
 ></TBODY
 ></TABLE
@@ -978,7 +978,7 @@ VALIGN="TOP"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN3108"
+NAME="AEN3114"
 ></A
 ><H3
 ><A
@@ -1026,7 +1026,7 @@ CLASS="PROGRAMLISTING"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN3113"
+NAME="AEN3119"
 ></A
 ><H3
 ><A
@@ -1061,7 +1061,7 @@ CLASS="PROGRAMLISTING"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN3118"
+NAME="AEN3124"
 ></A
 ><H3
 ><A
@@ -1087,7 +1087,7 @@ CLASS="PROGRAMLISTING"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN3123"
+NAME="AEN3129"
 ></A
 ><H3
 ><A
@@ -1195,7 +1195,7 @@ CLASS="PROGRAMLISTING"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN3128"
+NAME="AEN3134"
 ></A
 ><H3
 ><A
@@ -1221,7 +1221,7 @@ CLASS="PROGRAMLISTING"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN3133"
+NAME="AEN3139"
 ></A
 ><H3
 ><A
@@ -1251,7 +1251,7 @@ CLASS="PROGRAMLISTING"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN3138"
+NAME="AEN3144"
 ></A
 ><H3
 ><A
@@ -1281,7 +1281,7 @@ CLASS="PROGRAMLISTING"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN3143"
+NAME="AEN3149"
 ></A
 ><H3
 ><A
@@ -1310,7 +1310,7 @@ will return from the function</P
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN3149"
+NAME="AEN3155"
 ></A
 ><H3
 ><A
@@ -1339,7 +1339,7 @@ will goto the error: label</P
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN3155"
+NAME="AEN3161"
 ></A
 ><H3
 ><A
@@ -1368,7 +1368,7 @@ will return from the function with a 0 value</P
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN3161"
+NAME="AEN3167"
 ></A
 ><H3
 ><A
@@ -1398,7 +1398,7 @@ HREF="libxslt-xsltinternals.html#XSLTSTYLESHEETPTR"
 ><DIV
 CLASS="INFORMALTABLE"
 ><A
-NAME="AEN3168"
+NAME="AEN3174"
 ></A
 ><P
 ></P
@@ -1434,7 +1434,7 @@ VALIGN="TOP"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN3177"
+NAME="AEN3183"
 ></A
 ><H3
 ><A
@@ -1467,7 +1467,7 @@ HREF="XMLCHAR"
 ><DIV
 CLASS="INFORMALTABLE"
 ><A
-NAME="AEN3185"
+NAME="AEN3191"
 ></A
 ><P
 ></P
@@ -1520,7 +1520,7 @@ VALIGN="TOP"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN3198"
+NAME="AEN3204"
 ></A
 ><H3
 ><A
@@ -1555,7 +1555,7 @@ CLASS="PARAMETER"
 ><DIV
 CLASS="INFORMALTABLE"
 ><A
-NAME="AEN3206"
+NAME="AEN3212"
 ></A
 ><P
 ></P
@@ -1593,7 +1593,7 @@ VALIGN="TOP"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN3215"
+NAME="AEN3221"
 ></A
 ><H3
 ><A
@@ -1623,7 +1623,7 @@ HREF="XMLCHAR"
 ><DIV
 CLASS="INFORMALTABLE"
 ><A
-NAME="AEN3222"
+NAME="AEN3228"
 ></A
 ><P
 ></P
@@ -1676,7 +1676,7 @@ VALIGN="TOP"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN3235"
+NAME="AEN3241"
 ></A
 ><H3
 ><A
@@ -1711,7 +1711,7 @@ CLASS="PARAMETER"
 ><DIV
 CLASS="INFORMALTABLE"
 ><A
-NAME="AEN3243"
+NAME="AEN3249"
 ></A
 ><P
 ></P
@@ -1749,7 +1749,7 @@ VALIGN="TOP"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN3252"
+NAME="AEN3258"
 ></A
 ><H3
 ><A
@@ -1787,7 +1787,7 @@ HREF="XMLCHAR"
 ><DIV
 CLASS="INFORMALTABLE"
 ><A
-NAME="AEN3261"
+NAME="AEN3267"
 ></A
 ><P
 ></P
@@ -1857,7 +1857,7 @@ VALIGN="TOP"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN3278"
+NAME="AEN3284"
 ></A
 ><H3
 ><A
@@ -1895,7 +1895,7 @@ HREF="XMLDOCPTR"
 ><DIV
 CLASS="INFORMALTABLE"
 ><A
-NAME="AEN3287"
+NAME="AEN3293"
 ></A
 ><P
 ></P
@@ -1965,7 +1965,7 @@ VALIGN="TOP"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN3304"
+NAME="AEN3310"
 ></A
 ><H3
 ><A
@@ -2000,7 +2000,7 @@ information related to the stylesheet output</P
 ><DIV
 CLASS="INFORMALTABLE"
 ><A
-NAME="AEN3312"
+NAME="AEN3318"
 ></A
 ><P
 ></P
@@ -2055,7 +2055,7 @@ VALIGN="TOP"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN3325"
+NAME="AEN3331"
 ></A
 ><H3
 ><A
@@ -2088,7 +2088,7 @@ HREF="XMLDOCPTR"
 ><DIV
 CLASS="INFORMALTABLE"
 ><A
-NAME="AEN3333"
+NAME="AEN3339"
 ></A
 ><P
 ></P
@@ -2141,7 +2141,7 @@ VALIGN="TOP"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN3346"
+NAME="AEN3352"
 ></A
 ><H3
 ><A
@@ -2179,7 +2179,7 @@ HREF="XMLNODEPTR"
 ><DIV
 CLASS="INFORMALTABLE"
 ><A
-NAME="AEN3355"
+NAME="AEN3361"
 ></A
 ><P
 ></P
@@ -2251,7 +2251,7 @@ VALIGN="TOP"
 ><HR><DIV
 CLASS="REFSECT2"
 ><A
-NAME="AEN3372"
+NAME="AEN3378"
 ></A
 ><H3
 ><A
@@ -2330,7 +2330,7 @@ X      any other characters can be used in the prefix or suffix
 ><DIV
 CLASS="INFORMALTABLE"
 ><A
-NAME="AEN3390"
+NAME="AEN3396"
 ></A
 ><P
 ></P
